[gd_scene load_steps=15 format=2]

[ext_resource path="res://Items/Notepad.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Notes/NoteHandler.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Notes/note.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level1/Assets/Note.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level1/Assets/notefortext.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Notefont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Fonts/mainmenufont.tres" type="DynamicFont" id=7]

[sub_resource type="Animation" id=1]
resource_name = "popout"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("note:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 308, 15 ), Vector2( 291, 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("note2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 308, 15 ), Vector2( 274, 15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("note3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 308, 15 ), Vector2( 257, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("note4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 308, 15 ), Vector2( 240, 15 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("note5:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 308, 15 ), Vector2( 223, 15 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("note6:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 308, 15 ), Vector2( 206, 15 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("note7:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 308, 15 ), Vector2( 189, 15 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("note8:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 308, 15 ), Vector2( 172, 15 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("note9:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 308, 15 ), Vector2( 155, 15 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("note10:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 308, 15 ), Vector2( 138, 15 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.580392, 0.580392, 0.580392, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "show_3"
length = 0.5

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "show_3"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Node2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="NoteHandler" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
debug = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Node2D" type="Node2D" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )

[node name="Notes" type="Node2D" parent="CanvasLayer/Node2D"]

[node name="note" parent="CanvasLayer/Node2D/Notes" instance=ExtResource( 3 )]
visible = false
self_note = 1

[node name="note2" parent="CanvasLayer/Node2D/Notes" instance=ExtResource( 3 )]
visible = false
self_note = 2

[node name="note3" parent="CanvasLayer/Node2D/Notes" instance=ExtResource( 3 )]
visible = false
self_note = 3

[node name="note4" parent="CanvasLayer/Node2D/Notes" instance=ExtResource( 3 )]
visible = false
self_note = 4

[node name="note5" parent="CanvasLayer/Node2D/Notes" instance=ExtResource( 3 )]
visible = false
self_note = 5

[node name="note6" parent="CanvasLayer/Node2D/Notes" instance=ExtResource( 3 )]
visible = false
self_note = 6

[node name="note7" parent="CanvasLayer/Node2D/Notes" instance=ExtResource( 3 )]
visible = false
self_note = 7

[node name="note8" parent="CanvasLayer/Node2D/Notes" instance=ExtResource( 3 )]
visible = false
self_note = 8

[node name="note9" parent="CanvasLayer/Node2D/Notes" instance=ExtResource( 3 )]
visible = false
self_note = 9

[node name="note10" parent="CanvasLayer/Node2D/Notes" instance=ExtResource( 3 )]
visible = false
self_note = 10

[node name="Popout" type="AnimationPlayer" parent="CanvasLayer/Node2D/Notes"]
anims/popout = SubResource( 1 )

[node name="Notepad" type="Sprite" parent="CanvasLayer/Node2D"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
position = Vector2( 309, 14 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="CanvasLayer/Node2D/Notepad"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -9.0
margin_top = -11.0
margin_right = 9.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hover" type="AnimationPlayer" parent="CanvasLayer/Node2D/Notepad"]
anims/show_note = SubResource( 2 )

[node name="Level1" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="Note" parent="CanvasLayer/Level1" instance=ExtResource( 4 )]
visible = false
position = Vector2( -18, -21 )
is_notes = true

[node name="Level2" type="Node2D" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )

[node name="textbackground2" type="Sprite" parent="CanvasLayer/Level2"]
position = Vector2( 161, 86 )
scale = Vector2( 0.284, 0.283 )
texture = ExtResource( 5 )

[node name="ouders" type="Label" parent="CanvasLayer/Level2"]
visible = false
margin_left = 77.0
margin_top = 49.0
margin_right = 1977.0
margin_bottom = 930.0
rect_scale = Vector2( 0.09, 0.09 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "De Ossenwaard is een grote hank (nevengeul) geworden. Dit komt omdat alle kleine nevengeulen samen zijn gevoegd om één water te maken. Er is ook een deel van de bovengrond weggehaald om zandgrond af te zetten om een strand aan te leggen. Bij bruggen staat meestal een geleidewerk of remmingwerk. Hierdoor kunnen schepen  afremmen als ze bijna tegen de brug of de oever aan dreigen te varen. Ook kunnen ze bij de hekken die in het water staan wachten totdat ze door kunnen varen.
"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crazy_guy" type="Label" parent="CanvasLayer/Level2"]
visible = false
margin_left = 90.0
margin_top = 42.0
margin_right = 1530.0
margin_bottom = 923.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "De Ossenwaard wordt afgescheiden van de IJssel door een bollenlijn, zo kunnen er niet zomaar boten de hank invaren."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lil_girl" type="Label" parent="CanvasLayer/Level2"]
visible = false
margin_left = 80.0
margin_top = 42.0
margin_right = 1730.0
margin_bottom = 923.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "De Ossenwaardse uiterwaard heeft weinig vegetatie aan de kant grenzend aan de IJssel. Dit is zodat de doorstroombaarheid goed blijft, en de rivier ook  niet te snel of  te langzaam gaat vloeien. Dit verminderd de kans op overstromingen."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Level2"]
anims/show_3 = SubResource( 3 )
anims/show_all = SubResource( 4 )

[node name="X" type="Label" parent="CanvasLayer/Level2"]
margin_left = 260.0
margin_top = 124.0
margin_right = 337.0
margin_bottom = 253.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/Level2/X"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -99.9998
margin_top = -59.9999
margin_right = 170.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3" type="Node2D" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )

[node name="textbackground" type="Sprite" parent="CanvasLayer/Level3"]
position = Vector2( 161, 86 )
scale = Vector2( 0.284, 0.283 )
texture = ExtResource( 5 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="CanvasLayer/Level3"]
anims/show_3 = SubResource( 5 )
anims/show_all = SubResource( 6 )

[node name="note1" type="Label" parent="CanvasLayer/Level3"]
margin_left = 77.0
margin_top = 43.0
margin_right = 1777.0
margin_bottom = 924.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "De Bolwerksplas wordt vergroot, ondieper gemaakt en omgevormd tot een brede hank met flauwe oevers. Het vergroten en ondieper maken van de hank wordt toegepast met de hoofdfunctie om het een natuurgerelateerd gebied te maken. Zo neemt het niet te veel water uit de IJssel over terwijl het als nevengeul dient."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="note2" type="Label" parent="CanvasLayer/Level3"]
visible = false
margin_left = 80.0
margin_top = 44.0
margin_right = 1760.0
margin_bottom = 925.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Door het ondiepe water in de Bolwerksplas is het gebied een geschikte habitat voor pioniersoorten. Ook worden de randen van de oevers begraasd door vee, waardoor de vegetatie kort blijft en daarmee de doorstroombaarheid ook goed blijft."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="note3" type="Label" parent="CanvasLayer/Level3"]
visible = false
margin_left = 77.0
margin_top = 43.0
margin_right = 1797.0
margin_bottom = 924.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "De Bolwerksplas behoudt bereikbaarheid voor fietser en automobilisten. Er is ruimte voor recreatieve visserij en natuurwandelingen in het open en rustige gebied. Vaarreacreatie is verboden en de hank is afgesloten met een bollenlijn."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X2" type="Label" parent="CanvasLayer/Level3"]
margin_left = 260.0
margin_top = 124.0
margin_right = 337.0
margin_bottom = 253.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3Hider" type="Button" parent="CanvasLayer/Level3/X2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -50.0
margin_top = -20.0
margin_right = 120.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show = SubResource( 7 )
[connection signal="mouse_entered" from="CanvasLayer/Node2D/Notepad/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Node2D/Notepad/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Node2D/Notepad/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Level2/X/Button" to="." method="_on_Hider_pressed"]
[connection signal="pressed" from="CanvasLayer/Level3/X2/Level3Hider" to="." method="_on_Level3Hider_pressed"]
